--- a/010_前提知識/020_関数/start/index.html
+++ b/010_前提知識/020_関数/start/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
         const span = document.createElement('span');
         span.textContent = decodeURI(window.location.pathname);
         document.body.appendChild(span);
     </script>
+    <script src="./main.js"></script>
     <h1>編集用ファイル</h1>
     <a href="../end" style="font-weight: 600; color: red;">
         完成ファイルへ
@@ -20,11 +23,12 @@
         <a href="../../" style="margin-right: 10px;">
             セクションへ
         </a>
-    
+
         <a href="../../../">
             コースへ
         </a>
     </div>
     <script src="main.js"></script>
 </body>
+
 </html>
