--- a/090_モジュラーJavaScript/020_ESModuleと即時関数/start/index.html
+++ b/090_モジュラーJavaScript/020_ESModuleと即時関数/start/index.html
@@ -27,5 +27,6 @@
     </div>
     <!-- <script src="main.js"></script> -->
     <script type="module" src="moduleB.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
 </body>
 </html>
